# dreamworks

./: .gitignore  ARCHITECTURE.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
functions/: .gitignore  package.json  tsconfig.json  tsconfig.tsbuildinfo
functions/src/: cache.ts  feature-keys.ts  gemini-client.ts  gemini-proxy.ts  gemini-quota.ts  index.ts  models.ts  usage.ts
scripts/: check-no-mock-imports.sh  seed-firebase.ts  tsconfig.json
sdk/dreamworks-sdk/: README.md  package.json  tsconfig.json
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: build_scanner.rs  lib.rs  main.rs
src/hooks/: use-account.ts  use-admin.ts  use-ai.ts  use-alerts-evaluator.ts  use-analytics.ts  use-announcements.ts  use-app-achievements.ts  use-app-builds.ts  use-apps.ts  use-audit-log.ts  use-build-validation.ts  use-categories.ts  use-cdn.ts  use-charts.ts  use-chat.ts  use-cleanup-candidates.ts  use-cloud-saves.ts  use-collections.ts  use-communities.ts  use-compatibility.ts  use-config.ts  use-console-advanced.ts  use-console.ts  use-controller-layouts.ts  use-cosmetics.ts  use-developer-drafts.ts  use-developer.ts  use-drm.ts  use-feature-flag.ts  use-follow-suggestions.ts  use-forums.ts  use-friend-presence-notifier.ts  use-friends.ts  use-game-db.ts  use-game-search.ts  use-games.ts  use-lfg-board.ts  use-lfg-groups.ts  use-library-import-notifier.ts  (+26 more)
(+592 files in other folders)
