[package]
name = "dreamworks"
version = "0.1.0"
description = "Dreamworks digital game store"
authors = ["Dreams Technologies"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dreamworks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
sysinfo = "0.36.1"
